Make the correct text slightly more readable

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -346,7 +346,7 @@ html {
 }
 
 body {
-    color: #91a1b8;
+    color: #6b7a90;
     font-size: 1rem
 }
 
@@ -469,11 +469,11 @@ h6,
 }
 
 .text-light {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .text-light a {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .text-light h1,
@@ -540,7 +540,7 @@ i {
 }
 
 blockquote {
-    color: #91a1b8;
+    color: #6b7a90;
     font-style: italic;
     margin-top: 24px;
     margin-bottom: 24px;
@@ -560,7 +560,7 @@ blockquote p {
 }
 
 address {
-    color: #91a1b8;
+    color: #6b7a90;
     border-width: 1px 0;
     border-style: solid;
     border-color: #E9EDF3;
@@ -1131,39 +1131,39 @@ label {
     border-style: solid;
     border-color: #E9EDF3;
     border-radius: 2px;
-    color: #91a1b8;
+    color: #6b7a90;
     max-width: 100%;
     width: 100%
 }
 
 .input::-webkit-input-placeholder,
 .textarea::-webkit-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:-ms-input-placeholder,
 .textarea:-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::-ms-input-placeholder,
 .textarea::-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::placeholder,
 .textarea::placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::-ms-input-placeholder,
 .textarea::-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:-ms-input-placeholder,
 .textarea:-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:hover,
@@ -1429,7 +1429,7 @@ label {
     line-height: 24px;
     letter-spacing: -0.1px;
     font-weight: 600;
-    color: #8595AE;
+    color: #91a1b8;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 16px;
@@ -1810,11 +1810,11 @@ main {
     line-height: 20px;
     letter-spacing: 0px;
     background: #182538;
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .site-footer a {
-    color: #91a1b8;
+    color: #6b7a90;
     text-decoration: none
 }
 
@@ -1929,7 +1929,7 @@ main {
 }
 
 .lights-off {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .lights-off .asset-light {
@@ -1941,7 +1941,7 @@ main {
 }
 
 .lights-off a {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .lights-off h1,
@@ -2513,7 +2513,7 @@ html {
 }
 
 body {
-    color: #91a1b8;
+    color: #6b7a90;
     font-size: 1rem
 }
 
@@ -2636,11 +2636,11 @@ h6,
 }
 
 .text-light {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .text-light a {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .text-light h1,
@@ -2707,7 +2707,7 @@ i {
 }
 
 blockquote {
-    color: #91a1b8;
+    color: #6b7a90;
     font-style: italic;
     margin-top: 24px;
     margin-bottom: 24px;
@@ -2727,7 +2727,7 @@ blockquote p {
 }
 
 address {
-    color: #91a1b8;
+    color: #6b7a90;
     border-width: 1px 0;
     border-style: solid;
     border-color: #E9EDF3;
@@ -3298,39 +3298,39 @@ label {
     border-style: solid;
     border-color: #E9EDF3;
     border-radius: 2px;
-    color: #91a1b8;
+    color: #6b7a90;
     max-width: 100%;
     width: 100%
 }
 
 .input::-webkit-input-placeholder,
 .textarea::-webkit-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:-ms-input-placeholder,
 .textarea:-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::-ms-input-placeholder,
 .textarea::-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::placeholder,
 .textarea::placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input::-ms-input-placeholder,
 .textarea::-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:-ms-input-placeholder,
 .textarea:-ms-input-placeholder {
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .input:hover,
@@ -3596,7 +3596,7 @@ label {
     line-height: 24px;
     letter-spacing: -0.1px;
     font-weight: 600;
-    color: #8595AE;
+    color: #91a1b8;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 16px;
@@ -3977,11 +3977,11 @@ main {
     line-height: 20px;
     letter-spacing: 0px;
     background: #182538;
-    color: #91a1b8
+    color: #6b7a90
 }
 
 .site-footer a {
-    color: #91a1b8;
+    color: #6b7a90;
     text-decoration: none
 }
 
@@ -4096,7 +4096,7 @@ main {
 }
 
 .lights-off {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .lights-off .asset-light {
@@ -4108,7 +4108,7 @@ main {
 }
 
 .lights-off a {
-    color: #8595AE
+    color: #91a1b8
 }
 
 .lights-off h1,
